--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "Jonas",
   "license": "ISC",
   "devDependencies": {
+    "@types/mongodb": "^3.3.11",
     "@types/node": "^12.12.14",
     "typescript": "^3.7.2"
   },
   "dependencies": {
+    "async": "^3.1.0",
     "mongodb": "^3.3.5",
     "netcdfjs": "^1.0.0"
   }
